include/flow_ffi.h

// Error codes
typedef enum FlowError {
    FLOW_SUCCESS = 0,
    FLOW_ERROR_INVALID_HANDLE = -1,
    FLOW_ERROR_INVALID_ARGUMENT = -2,
    FLOW_ERROR_NODE_NOT_FOUND = -3,
    FLOW_ERROR_PORT_NOT_FOUND = -4,
    FLOW_ERROR_CONNECTION_FAILED = -5,
    FLOW_ERROR_MODULE_LOAD_FAILED = -6,
    FLOW_ERROR_COMPUTATION_FAILED = -7,
    FLOW_ERROR_OUT_OF_MEMORY = -8,
    FLOW_ERROR_TYPE_MISMATCH = -9,
    FLOW_ERROR_NOT_IMPLEMENTED = -10,
    FLOW_ERROR_UNKNOWN = -999
} FlowError;
// Opaque handle types
typedef struct FlowGraph* FlowGraphHandle;
typedef struct FlowNode* FlowNodeHandle;
typedef struct FlowConnection* FlowConnectionHandle;
typedef struct FlowEnv* FlowEnvHandle;
typedef struct FlowNodeFactory* FlowNodeFactoryHandle;
typedef struct FlowModule* FlowModuleHandle;
typedef struct FlowNodeData* FlowNodeDataHandle;
// Result structure for operations that may fail
typedef struct FlowResult {
    FlowError error;
    void* data;
} FlowResult;
// String result for functions returning strings
typedef struct FlowStringResult {
    FlowError error;
    const char* data;
} FlowStringResult;
// Connection information for graph connection queries
typedef struct FlowConnectionInfo {
    const char* id;
    const char* source_node_id;
    const char* source_port_key;
    const char* target_node_id;
    const char* target_port_key;
} FlowConnectionInfo;
// ============================================================================
// Port Metadata (for Optional Values)
// ============================================================================

// Port metadata structure for UI integration
// The interworking_value_json field contains JSON with type and default value
// Format: {"type":"string|integer|float|boolean|none","value":"<default_value>"}
// Examples:
//   {"type":"string","value":"/home/user/file.png"}
//   {"type":"integer","value":"640"}
//   {"type":"float","value":"2.5"}
//   {"type":"boolean","value":"true"}
//   {"type":"none"}  // Complex types, not editable
typedef struct FlowPortMetadata {
    const char* key;                     // Port identifier
    const char* interworking_value_json; // JSON string with type and value
    bool has_default;                    // Whether default value exists
} FlowPortMetadata;
// ============================================================================
// Image Data (P10 — FLOW_RUN.html Appendix B §B.4)
// ============================================================================

// Storage kind for an image payload.
typedef enum FlowImageKind {
    FLOW_IMAGE_KIND_ENCODED  = 0, // PNG/JPEG/etc. byte stream
    FLOW_IMAGE_KIND_RAW_RGBA = 1, // tightly packed or strided RGBA8, top-left origin
} FlowImageKind;
// Pixel format for RAW images.  v1 supports RGBA8888 only; enum is
// provisioned with room for BGRA/RGB/GRAY without breaking the ABI.
typedef enum FlowPixelFormat {
    FLOW_PIXEL_FORMAT_RGBA8888 = 0, // 4 bytes per pixel
} FlowPixelFormat;
// Read-only descriptor populated by flow_data_image_borrow.  The bytes
// pointer is owned by the originating FlowNodeDataHandle and remains
// valid only until flow_data_destroy is called on that handle.
typedef struct FlowImageDescriptor {
    FlowImageKind   kind;
    FlowPixelFormat format;            // ignored for ENCODED
    int32_t         width;
    int32_t         height;
    int32_t         row_stride_bytes;  // == width*4 if tightly packed (RAW only)
    const uint8_t*  bytes;             // owned by the C++ side
    size_t          bytes_length;
    uint64_t        content_version;   // monotonic; used by the Dart coalescer to dedup
} FlowImageDescriptor;
// ============================================================================
// Texture Ops Callbacks (Phase D — CUDA/GL interop plugin-extension pattern)
// ============================================================================
//
// libflow_ffi.so cannot include flutter_linux headers directly (they are only
// available inside a `flutter build linux` context).  Instead, the Linux plugin
// (packages/flow_ffi_flutter/linux/) implements the FlTextureGL GObject subclass
// and exposes the three operations below as C function-pointer callbacks that it
// injects at plugin registration time via flow_ffi_set_texture_ops().
//
// All callbacks receive a `registrar` pointer (the same void* previously stored
// by flow_ffi_set_texture_registrar).  All are called on the platform/UI thread
// unless noted otherwise.
//
// create_gl_texture(registrar, width, height,
//                  out_texture_object, out_texture_id, out_gl_name)
//   Allocate a FlTextureGL subclass wrapping a pre-created GL texture of the
//   given dimensions, register it with FlTextureRegistrar, and write:
//     *out_texture_object — opaque GObject* (caller must g_object_ref if it
//                           keeps a long-lived reference)
//     *out_texture_id     — int64_t Flutter texture ID
//     *out_gl_name        — uint32_t OpenGL texture name (for CUDA interop)
//   Returns 0 on success, -1 on failure.
//
// destroy_gl_texture(registrar, texture_object, texture_id)
//   Unregister from FlTextureRegistrar, g_object_unref the texture object.
//
// mark_frame_available(registrar, texture_object)
//   Call fl_texture_registrar_mark_texture_frame_available.

typedef int  (*FlowTextureCreateFn)(void* registrar,
                                    int32_t width, int32_t height,
                                    void** out_texture_object,
                                    int64_t* out_texture_id,
                                    uint32_t* out_gl_name);
typedef void (*FlowTextureDestroyFn)(void* registrar,
                                     void* texture_object,
                                     int64_t texture_id);
typedef void (*FlowTextureMarkFrameFn)(void* registrar,
                                       void* texture_object);
// wait_initialized(texture_object, out_cuda_resource)
//   Block (up to ~1 second) until the raster thread has completed the deferred
//   GL initialisation in FlTextureGL::populate().  On success writes the
//   cudaGraphicsResource_t handle to *out_cuda_resource and returns 0.
//   Returns non-zero if initialization failed or timed out; caller must drop
//   the frame in that case.  thread-safe; may be called from any thread.
typedef int  (*FlowTextureWaitInitFn)(void* texture_object,
                                      void** out_cuda_resource);
// submit_frame(texture_object, src_device_ptr, src_pitch_bytes,
//              width, height, ready_event)
//   Copy pixels from a CUDA device buffer into the texture's staging buffer
//   (pure D→D, no GL context required).  The actual GL-coupled Map/Memcpy/
//   Unmap happens later in populate() on the raster thread.
//   ready_event: optional cudaEvent_t* (cast to void*); if non-null the
//     copy is gated on the producer event before starting.
//   Returns 0 on success, non-zero if the frame was dropped (e.g. staging
//   buffer not yet allocated, dim mismatch, or CUDA error).
//   Thread-safe; called from the cascade worker thread.
typedef int  (*FlowTextureSubmitFrameFn)(void*       texture_object,
                                         const void* src_device_ptr,
                                         int32_t     src_pitch_bytes,
                                         int32_t     width,
                                         int32_t     height,
                                         void*       ready_event);
typedef struct FlowTextureOps {
    FlowTextureCreateFn      create_gl_texture;
    FlowTextureDestroyFn     destroy_gl_texture;
    FlowTextureMarkFrameFn   mark_frame_available;
    FlowTextureWaitInitFn    wait_initialized;    // added Phase D threading fix
    FlowTextureSubmitFrameFn submit_frame;        // added Phase D data-plane fix
} FlowTextureOps;
// create_gpu_texture(registrar, width, height,
//                   out_texture_object, out_texture_id)
//   Allocate a FlTextureGL subclass, register with FlTextureRegistrar, arm the
//   bootstrap re-mark loop, and write:
//     *out_texture_object — opaque GObject* (caller holds ref)
//     *out_texture_id     — int64_t Flutter texture ID
//   Returns 0 on success, -1 on failure.
typedef int  (*FlowGpuTextureCreateFn)(void*    registrar,
                                       int32_t  width,
                                       int32_t  height,
                                       void**   out_texture_object,
                                       int64_t* out_texture_id);
// destroy_gpu_texture(registrar, texture_object, texture_id)
//   Unregister from FlTextureRegistrar and g_object_unref the texture object.
typedef void (*FlowGpuTextureDestroyFn)(void*   registrar,
                                        void*   texture_object,
                                        int64_t texture_id);
// mark_gpu_frame_available(registrar, texture_object)
//   Call fl_texture_registrar_mark_texture_frame_available.
typedef void (*FlowGpuTextureMarkFrameFn)(void* registrar,
                                          void* texture_object);
// wait_gpu_initialized(texture_object)
//   Block (up to ~1 s) until populate() has completed deferred GL init.
//   Returns 0 on success, non-zero on failure / timeout.
typedef int  (*FlowGpuTextureWaitInitFn)(void* texture_object);
// submit_gpu_frame(texture_object, src_bytes, row_stride_bytes, width, height)
//   Copy host pixels into the texture's staging buffer (pure memcpy — no GL
//   context required).  Returns 0 on success, non-zero on drop.
typedef int  (*FlowGpuTextureSubmitFrameFn)(void*       texture_object,
                                            const void* src_bytes,
                                            int32_t     row_stride_bytes,
                                            int32_t     width,
                                            int32_t     height);
typedef struct FlowGpuTextureOps {
    FlowGpuTextureCreateFn      create_texture;
    FlowGpuTextureDestroyFn     destroy_texture;
    FlowGpuTextureMarkFrameFn   mark_frame_available;
    FlowGpuTextureWaitInitFn    wait_initialized;
    FlowGpuTextureSubmitFrameFn submit_frame;
} FlowGpuTextureOps;
// ============================================================================
// Event Callbacks (Phase 5)
// ============================================================================

// Callback function types
typedef void (*FlowNodeEventCallback)(FlowNodeHandle node, void* user_data);
typedef void (*FlowConnectionEventCallback)(FlowConnectionHandle conn, void* user_data);
typedef void (*FlowErrorEventCallback)(const char* error, void* user_data);
typedef void (*FlowNodeDataEventCallback)(FlowNodeHandle node, const char* port_key,
                                          FlowNodeDataHandle data, void* user_data);
// Event registration handle for tracking callbacks
typedef struct FlowEventRegistration* FlowEventRegistrationHandle;
FLOW_FFI_EXPORT FlowEventRegistrationHandle flow_graph_on_nodes_disconnected(
    FlowGraphHandle graph, FlowConnectionEventCallback callback, void* user_data);
FLOW_FFI_EXPORT FlowEventRegistrationHandle flow_graph_on_error(FlowGraphHandle graph,
                                                                FlowErrorEventCallback callback,
                                                                void* user_data);
// Node Events
FLOW_FFI_EXPORT FlowEventRegistrationHandle flow_node_on_compute(FlowNodeHandle node,
                                                                 FlowNodeEventCallback callback,
                                                                 void* user_data);
FLOW_FFI_EXPORT FlowEventRegistrationHandle flow_node_on_error(FlowNodeHandle node,
                                                               FlowErrorEventCallback callback,
                                                               void* user_data);
FLOW_FFI_EXPORT FlowEventRegistrationHandle
flow_node_on_set_input(FlowNodeHandle node, FlowNodeDataEventCallback callback, void* user_data);
FLOW_FFI_EXPORT FlowEventRegistrationHandle
flow_node_on_set_output(FlowNodeHandle node, FlowNodeDataEventCallback callback, void* user_data);
// Event unregistration
FLOW_FFI_EXPORT FlowError flow_event_unregister(FlowEventRegistrationHandle registration);
// Event registration validation
FLOW_FFI_EXPORT bool flow_event_is_valid(FlowEventRegistrationHandle registration);