dart_package/lib/src/ffi/bindings_generated.dart


  late final _flow_graph_on_nodes_disconnectedPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowGraphHandle,
              FlowConnectionEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_graph_on_nodes_disconnected');
  late final _flow_graph_on_nodes_disconnected =
      _flow_graph_on_nodes_disconnectedPtr.asFunction<
          FlowEventRegistrationHandle Function(FlowGraphHandle,
              FlowConnectionEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_graph_on_error(
    FlowGraphHandle graph,
    FlowErrorEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_graph_on_error(
      graph,
      callback,
      user_data,
    );
  }

  late final _flow_graph_on_errorPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowGraphHandle,
              FlowErrorEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_graph_on_error');
  late final _flow_graph_on_error = _flow_graph_on_errorPtr.asFunction<
      FlowEventRegistrationHandle Function(
          FlowGraphHandle, FlowErrorEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_node_on_compute(
    FlowNodeHandle node,
    FlowNodeEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_node_on_compute(
      node,
      callback,
      user_data,
    );
  }

  late final _flow_node_on_computePtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowNodeHandle,
              FlowNodeEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_node_on_compute');
  late final _flow_node_on_compute = _flow_node_on_computePtr.asFunction<
      FlowEventRegistrationHandle Function(
          FlowNodeHandle, FlowNodeEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_node_on_error(
    FlowNodeHandle node,
    FlowErrorEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_node_on_error(
      node,
      callback,
      user_data,
    );
  }

  late final _flow_node_on_errorPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowNodeHandle,
              FlowErrorEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_node_on_error');
  late final _flow_node_on_error = _flow_node_on_errorPtr.asFunction<
      FlowEventRegistrationHandle Function(
          FlowNodeHandle, FlowErrorEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_node_on_set_input(
    FlowNodeHandle node,
    FlowNodeDataEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_node_on_set_input(
      node,
      callback,
      user_data,
    );
  }

  late final _flow_node_on_set_inputPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowNodeHandle,
              FlowNodeDataEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_node_on_set_input');
  late final _flow_node_on_set_input = _flow_node_on_set_inputPtr.asFunction<
      FlowEventRegistrationHandle Function(
          FlowNodeHandle, FlowNodeDataEventCallback, ffi.Pointer<ffi.Void>)>();

  FlowEventRegistrationHandle flow_node_on_set_output(
    FlowNodeHandle node,
    FlowNodeDataEventCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _flow_node_on_set_output(
      node,
      callback,
      user_data,
    );
  }

  late final _flow_node_on_set_outputPtr = _lookup<
      ffi.NativeFunction<
          FlowEventRegistrationHandle Function(
              FlowNodeHandle,
              FlowNodeDataEventCallback,
              ffi.Pointer<ffi.Void>)>>('flow_node_on_set_output');
  late final _flow_node_on_set_output = _flow_node_on_set_outputPtr.asFunction<
      FlowEventRegistrationHandle Function(
          FlowNodeHandle, FlowNodeDataEventCallback, ffi.Pointer<ffi.Void>)>();

  int flow_event_unregister(
    FlowEventRegistrationHandle registration,
  ) {
    return _flow_event_unregister(
      registration,
    );
  }

  late final _flow_event_unregisterPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(FlowEventRegistrationHandle)>>(
      'flow_event_unregister');
  late final _flow_event_unregister = _flow_event_unregisterPtr
      .asFunction<int Function(FlowEventRegistrationHandle)>();

  bool flow_event_is_valid(
    FlowEventRegistrationHandle registration,
  ) {
    return _flow_event_is_valid(
      registration,
    );
  }

  late final _flow_event_is_validPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(FlowEventRegistrationHandle)>>(
      'flow_event_is_valid');
  late final _flow_event_is_valid = _flow_event_is_validPtr
      .asFunction<bool Function(FlowEventRegistrationHandle)>();
}

final class max_align_t extends ffi.Opaque {}

final class __fsid_t extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int> __val;
}

abstract class FlowError {
  static const int FLOW_SUCCESS = 0;
  static const int FLOW_ERROR_INVALID_HANDLE = -1;
  static const int FLOW_ERROR_INVALID_ARGUMENT = -2;
  static const int FLOW_ERROR_NODE_NOT_FOUND = -3;
  static const int FLOW_ERROR_PORT_NOT_FOUND = -4;
  static const int FLOW_ERROR_CONNECTION_FAILED = -5;
  static const int FLOW_ERROR_MODULE_LOAD_FAILED = -6;
  static const int FLOW_ERROR_COMPUTATION_FAILED = -7;
  static const int FLOW_ERROR_OUT_OF_MEMORY = -8;
  static const int FLOW_ERROR_TYPE_MISMATCH = -9;
  static const int FLOW_ERROR_NOT_IMPLEMENTED = -10;
  static const int FLOW_ERROR_UNKNOWN = -999;
}

final class FlowGraph extends ffi.Opaque {}

final class FlowNode extends ffi.Opaque {}

final class FlowConnection extends ffi.Opaque {}

final class FlowEnv extends ffi.Opaque {}

final class FlowNodeFactory extends ffi.Opaque {}

final class FlowModule extends ffi.Opaque {}

final class FlowNodeData extends ffi.Opaque {}

final class FlowResult extends ffi.Struct {
  @ffi.Int32()
  external int error;

  external ffi.Pointer<ffi.Void> data;
}

final class FlowStringResult extends ffi.Struct {
  @ffi.Int32()
  external int error;

  external ffi.Pointer<ffi.Char> data;
}

final class FlowConnectionInfo extends ffi.Struct {
  external ffi.Pointer<ffi.Char> id;

  external ffi.Pointer<ffi.Char> source_node_id;

  external ffi.Pointer<ffi.Char> source_port_key;

  external ffi.Pointer<ffi.Char> target_node_id;

  external ffi.Pointer<ffi.Char> target_port_key;
}

typedef FlowEnvHandle = ffi.Pointer<FlowEnv>;
typedef FlowNodeFactoryHandle = ffi.Pointer<FlowNodeFactory>;
typedef FlowNodeHandle = ffi.Pointer<FlowNode>;
typedef FlowNodeDataHandle = ffi.Pointer<FlowNodeData>;
typedef FlowGraphHandle = ffi.Pointer<FlowGraph>;
typedef FlowConnectionHandle = ffi.Pointer<FlowConnection>;

final class FlowPortMetadata extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  external ffi.Pointer<ffi.Char> interworking_value_json;

  @ffi.Bool()
  external bool has_default;
}

typedef FlowModuleHandle = ffi.Pointer<FlowModule>;

abstract class FlowImageKind {
  static const int FLOW_IMAGE_KIND_ENCODED = 0;
  static const int FLOW_IMAGE_KIND_RAW_RGBA = 1;
}

abstract class FlowPixelFormat {
  static const int FLOW_PIXEL_FORMAT_RGBA8888 = 0;
}

final class FlowImageDescriptor extends ffi.Struct {
  @ffi.Int32()
  external int kind;

  @ffi.Int32()
  external int format;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int row_stride_bytes;

  external ffi.Pointer<ffi.Uint8> bytes;

  @ffi.Size()
  external int bytes_length;

  @ffi.Uint64()
  external int content_version;
}

final class FlowTextureOps extends ffi.Struct {
  external FlowTextureCreateFn create_gl_texture;

  external FlowTextureDestroyFn destroy_gl_texture;

  external FlowTextureMarkFrameFn mark_frame_available;

  external FlowTextureWaitInitFn wait_initialized;

  external FlowTextureSubmitFrameFn submit_frame;
}

typedef FlowTextureCreateFn
    = ffi.Pointer<ffi.NativeFunction<FlowTextureCreateFnFunction>>;
typedef FlowTextureCreateFnFunction = ffi.Int Function(
    ffi.Pointer<ffi.Void> registrar,
    ffi.Int32 width,
    ffi.Int32 height,
    ffi.Pointer<ffi.Pointer<ffi.Void>> out_texture_object,
    ffi.Pointer<ffi.Int64> out_texture_id,
    ffi.Pointer<ffi.Uint32> out_gl_name);
typedef DartFlowTextureCreateFnFunction = int Function(
    ffi.Pointer<ffi.Void> registrar,
    int width,
    int height,
    ffi.Pointer<ffi.Pointer<ffi.Void>> out_texture_object,
    ffi.Pointer<ffi.Int64> out_texture_id,
    ffi.Pointer<ffi.Uint32> out_gl_name);
typedef FlowTextureDestroyFn
    = ffi.Pointer<ffi.NativeFunction<FlowTextureDestroyFnFunction>>;
typedef FlowTextureDestroyFnFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> registrar,
    ffi.Pointer<ffi.Void> texture_object,
    ffi.Int64 texture_id);
typedef DartFlowTextureDestroyFnFunction = void Function(
    ffi.Pointer<ffi.Void> registrar,
    ffi.Pointer<ffi.Void> texture_object,
    int texture_id);
typedef FlowTextureMarkFrameFn
    = ffi.Pointer<ffi.NativeFunction<FlowTextureMarkFrameFnFunction>>;
typedef FlowTextureMarkFrameFnFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> registrar, ffi.Pointer<ffi.Void> texture_object);
typedef DartFlowTextureMarkFrameFnFunction = void Function(
    ffi.Pointer<ffi.Void> registrar, ffi.Pointer<ffi.Void> texture_object);
typedef FlowTextureWaitInitFn
    = ffi.Pointer<ffi.NativeFunction<FlowTextureWaitInitFnFunction>>;
typedef FlowTextureWaitInitFnFunction = ffi.Int Function(
    ffi.Pointer<ffi.Void> texture_object,
    ffi.Pointer<ffi.Pointer<ffi.Void>> out_cuda_resource);
typedef DartFlowTextureWaitInitFnFunction = int Function(
    ffi.Pointer<ffi.Void> texture_object,
    ffi.Pointer<ffi.Pointer<ffi.Void>> out_cuda_resource);
typedef FlowTextureSubmitFrameFn
    = ffi.Pointer<ffi.NativeFunction<FlowTextureSubmitFrameFnFunction>>;
typedef FlowTextureSubmitFrameFnFunction = ffi.Int Function(
    ffi.Pointer<ffi.Void> texture_object,
    ffi.Pointer<ffi.Void> src_device_ptr,
    ffi.Int32 src_pitch_bytes,
    ffi.Int32 width,
    ffi.Int32 height,
    ffi.Pointer<ffi.Void> ready_event);
typedef DartFlowTextureSubmitFrameFnFunction = int Function(
    ffi.Pointer<ffi.Void> texture_object,
    ffi.Pointer<ffi.Void> src_device_ptr,
    int src_pitch_bytes,
    int width,
    int height,
    ffi.Pointer<ffi.Void> ready_event);

final class FlowGpuTextureOps extends ffi.Struct {
  external FlowGpuTextureCreateFn create_texture;

  external FlowGpuTextureDestroyFn destroy_texture;

  external FlowGpuTextureMarkFrameFn mark_frame_available;

  external FlowGpuTextureWaitInitFn wait_initialized;

  external FlowGpuTextureSubmitFrameFn submit_frame;
}
